--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
 
 <head>
-    <title>Simple login form</title>
+    <title>Akan Names</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/guess_name.css">
 </head>
 <script src="/CSS/akan_name.js"></script>
 <body>
+    <section>
+        <p>
+            Akan names are derived from Ghanian culture. Frequently in Ghana,
+            children are given their first name as a 'day name' which corresponds to the day 
+            in the week they were born.
+            Below form will help you determine your Akan name by filling the form and submitting.
+        </p>
+    </section>
     <form action="" onsubmit="submitFields(); return false">
         <h3>The road to Akan</h3>
         <div class="formcontainer">
