--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <title>Akan Names</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="/CSS/guess_name.css">
+    <link rel="stylesheet" href="CSS/guess_name.css">
 </head>
-<script src="/CSS/akan_name.js"></script>
+<script src="CSS/akan_name.js"></script>
 <body>
     <section>
         <p>
