dividing the section on the index page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             Below form will help you determine your Akan name by filling the form and submitting.
         </p>
     </section>
+<section>
     <form action="" onsubmit="submitFields(); return false">
         <h3>The road to Akan</h3>
         <div class="formcontainer">
@@ -43,6 +44,7 @@
                 <span id='akanName'></span>
             </div>
     </form>
+</section>
 </body>
 
 </html>
