--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <script src="CSS/akan_name.js"></script>
 <body>
-    <section>
+    <div>
         <p>
             Akan names are derived from Ghanian culture. Frequently in Ghana,
             children are given their first name as a 'day name' which corresponds to the day 
             in the week they were born.
             Below form will help you determine your Akan name by filling the form and submitting.
         </p>
-    </section>
-<section>
+    </div>
+
     <form action="" onsubmit="submitFields(); return false">
         <h3>The road to Akan</h3>
         <div class="formcontainer">
@@ -44,7 +44,7 @@
                 <span id='akanName'></span>
             </div>
     </form>
-</section>
+
 </body>
 
 </html>
