--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <script src="CSS/akan_name.js"></script>
 <body>
     <div>
-        <p>
+        <h4>
             Akan names are derived from Ghanian culture. Frequently in Ghana,
             children are given their first name as a 'day name' which corresponds to the day 
             in the week they were born.
             Below form will help you determine your Akan name by filling the form and submitting.
-        </p>
+        </h4>
     </div>
     <br></br>
     <form action="" onsubmit="submitFields(); return false">
-        <h3>The road to Akan</h3>
+        <h3>Discover your Akan Name</h3>
         <div class="formcontainer">
             <hr />
             <div class="container">
